--- a/test.html
+++ b/test.html
@@ -62,18 +62,33 @@
         }
         async function fetchHistoricalData(interval) {
           try {
+            // const response = await fetch(
+            //   `https://api.binance.com/api/v3/klines?symbol=BTCUSDT&interval=${interval}&limit=365`
+            // );
             const response = await fetch(
-              `https://api.binance.com/api/v3/klines?symbol=BTCUSDT&interval=${interval}&limit=365`
+              `https://api.investing.com/api/financialdata/41063/historical/chart/?interval=P1D&pointscount=160`
             );
+
+            // const data = await response.json();
+            // const formattedData = data.map((candle) => ({
+            //   time: candle[0] / 1000,
+            //   open: parseFloat(candle[1]),
+            //   high: parseFloat(candle[2]),
+            //   low: parseFloat(candle[3]),
+            //   close: parseFloat(candle[4]),
+            // }));
+            // candleSeries.setData(formattedData);
+
             const data = await response.json();
-            const formattedData = data.map((candle) => ({
-              time: candle[0] / 1000,
+            const formattedData = data.data.map((candle) => ({
+              time: candle[0] / 1000, // Đổi timestamp từ milliseconds sang seconds
               open: parseFloat(candle[1]),
               high: parseFloat(candle[2]),
               low: parseFloat(candle[3]),
               close: parseFloat(candle[4]),
             }));
             candleSeries.setData(formattedData);
+
             const volumeData = data.map((candle) => ({
               time: candle[0] / 1000,
               value: parseFloat(candle[5]),
@@ -120,7 +135,7 @@
           const interval = timeframeSelect.value;
           createChart();
           fetchHistoricalData(interval);
-          setupWebSocket(interval);
+          //   setupWebSocket(interval);
         }
         timeframeSelect.addEventListener("change", updateChart);
         updateChart();
