--- a/test.html
+++ b/test.html
@@ -319,7 +319,22 @@
               pinch: true,
             },
           };
-          chart = LightweightCharts.createChart(chartElement, chartOptions);
+          const chartWidth = chartElement.clientWidth;
+          const minBarSpacing = chartWidth / 300;
+
+          chart = LightweightCharts.createChart(chartElement, {
+            width: chartWidth,
+            height: chartElement.clientHeight,
+            // ... các tùy chọn khác ...
+            timeScale: {
+              timeVisible: true,
+              secondsVisible: false,
+              borderColor: isDarkTheme ? "#363636" : "#c8c8c8",
+              minBarSpacing: minBarSpacing, // Giới hạn zoom tối thiểu
+            },
+            // ...
+          });
+
           // Set up series options based on theme
           const candleSeriesOptions = {
             upColor: "#26a69a",
@@ -419,7 +434,7 @@
         async function fetchHistoricalData(interval) {
           try {
             const response = await fetch(
-              `https://api.binance.com/api/v3/klines?symbol=BTCUSDT&interval=${interval}&limit=365`
+              `https://api.binance.com/api/v3/klines?symbol=BTCUSDT&interval=${interval}&limit=1000`
             );
             const data = await response.json();
             const formattedData = data.map((candle) => ({
